Sign Up From final

--- a/week-06/day-3/SignUpForm/index.html
+++ b/week-06/day-3/SignUpForm/index.html
@@ -17,7 +17,7 @@
         <input type="password" placeholder="Password"> <br>
         <input type="password" placeholder="Retry password"> <br>
       </div>
-      <input type="submit" value="Sign me up">
+      <input class="submit" type="submit" value="SIGN ME UP">
     </div>
 
     <div class="second-sized card">
