--- a/week-06/day-3/SignUpForm/index.html
+++ b/week-06/day-3/SignUpForm/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+<form>
   <div class="content">
 
     <div class="third-sized card block1">
@@ -32,7 +33,7 @@
       </div>
     </div>
   </div>
-
+</form>
 </body>
 
 
